--- a/css/index_form.css
+++ b/css/index_form.css
@@ -1,3 +1,9 @@
+.float{
+    float: left;
+    border: 2px solid red;
+    margin: 10px;
+    padding: 40px;
+}
 img{
     width: 200px;
     height:200px;
@@ -6,4 +12,7 @@ img{
 }
 h3 {
     color:indianred;
+}
+.img {
+    width: 200px;
 }
