form & input = over

--- a/css/index_form.css
+++ b/css/index_form.css
@@ -2,11 +2,11 @@
     float: left;
     border: 2px solid red;
     margin: 10px;
-    padding: 40px;
+    padding: 30px;
 }
 img{
     width: 200px;
-    height:200px;
+    height:100px;
     object-fit: contain;
 
 }
@@ -15,4 +15,7 @@ h3 {
 }
 .img {
     width: 200px;
+}
+video {
+    width: 400px;
 }
